Fix contrast issue.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,6 +54,7 @@ main img {
 
 p {
     margin: 1rem;
+    color: rgb(0, 68, 102);
 }
 
 aside {
@@ -92,8 +93,8 @@ header, .grid, footer {
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem;
-    background-color: rgba(0, 102, 153, 0.1);
-    color: var(--primary-color);
+    background-color: rgb(0, 102, 153, 0.1);
+    color: rgb(0, 68, 102);
 }
 
 .indent {
